mac: Restore the "Hide Other" main menu shortcut.

Also ensure Hide Others and Show All are in the PWA menus.

Bug: 892480
Change-Id: I507771745c95203fda8344703c7b1b015a93699a
Reviewed-on: https://chromium-review.googlesource.com/c/1288851
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600851}
Former-commit-id: b6b04d44ac52363e6e670b7f39ea890bcbf22a67